--- a/index.html
+++ b/index.html
@@ -2,25 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="handlebars.js"></script>
+    <meta http-equiv="refresh" content="0; url=/https://www.notion.so/Jungyoo-s-Design-Archive-d61130946598404384dd34c15c410165" />
     <title>Jungyoo Lee</title>
   </head>
   <body>
-   <div class="menuBar">
-     <div class="menuBar_contents">
-       <span class="menuBar_myName">JUNG YOO LEE</span>
-       <span class="menuBar_menus">
-         <a href="main.html"><span class="menuBar_menu">About</span></a>
-         <a href="brandings.html"><span class="menuBar_menu">Branding</span></a>
-         <span class="menuBar_menu">Digital Product</span>
-         <span class="menuBar_menu">Editorial</span>
-       </span>
-     </div>
-   </div>
-   <div class="content">
-   </div>
-   <script src="script.js"></script>
   </body>
 </html>
