--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0;url=https://www.notion.so/Jungyoo-s-Design-Archive-d61130946598404384dd34c15c410165">
-    <title>Jungyoo Lee</title>
-  </head>
-  <body>
-  </body>
+
+    <meta http-equiv="refresh" content="0; url=http://itlab.tistory.com/"></meta>
+
 </html>
