--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-    <meta http-equiv="refresh" content="0; url=http://itlab.tistory.com/"></meta>
+    <meta http-equiv="refresh" content="0; url=https://www.notion.so/Jungyoo-s-Design-Archive-d61130946598404384dd34c15c410165/"></meta>
 
 </html>
